--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "@tailwindcss/vite": "^4.1.7",
         "@tanstack/react-table": "^8.21.3",
         "@vitejs/plugin-react": "^4.3.4",
+        "axios": "^1.9.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
