--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "concurrently": "^9.0.1",
         "date-fns": "^4.1.0",
         "emoji-picker-react": "^4.12.2",
+        "framer-motion": "^12.14.0",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.475.0",
@@ -69,6 +70,7 @@
         "react-dom": "^19.1.0",
         "react-markdown": "^10.1.0",
         "react-phone-number-input": "^3.4.12",
+        "react-router-dom": "^7.6.1",
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
